Fix reading MachineGuid on WoW64.

Change-Id: I4facf3700f274141640707b18c97a8db9fd7ef0c
Bug: 865007
Reviewed-on: https://chromium-review.googlesource.com/1141280
Reviewed-by: Julian Pastarmov <pastarmovj@chromium.org>
Commit-Queue: Georges Khalil <georgesak@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576100}
Former-commit-id: d1063a0589e2e5d0469e65c66df44bba59b4a95b