chrome/browser/policy/browser_dm_token_storage_win.cc
@@ -130,8 +130,9 @@ std::string BrowserDMTokenStorageWin::InitClientId() {
   // For the client id, use the Windows machine GUID.
   // TODO(crbug.com/821977): Need a backup plan if machine GUID doesn't exist.
   base::win::RegKey key;
-  LSTATUS status = key.Open(HKEY_LOCAL_MACHINE,
-                            L"SOFTWARE\\Microsoft\\Cryptography", KEY_READ);
+  LSTATUS status =
+      key.Open(HKEY_LOCAL_MACHINE, L"SOFTWARE\\Microsoft\\Cryptography",
+               KEY_QUERY_VALUE | KEY_WOW64_64KEY);
   if (status != ERROR_SUCCESS)
     return std::string();
 
